log/build_2024-03-29_08-43-57/py_pubsub/stderr.log
  File "/home/ro/ros2_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/subscriber_member_function.py", line 33
    self.get_logger().info(f'I heard: {}'.format(msg.data)) #info('I heard: "%s"' % msg.data)
                           ^
SyntaxError: f-string: empty expression not allowed

  File "/home/ro/ros2_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 34
    self.get_logger().info(f'Publishing: {}'.format(msg.data)) #info('Publishing: "%s"' % msg.data)
                           ^
SyntaxError: f-string: empty expression not allowed

